# previsedx-quantstudio-file-utils

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  backup_precommit_hook.sh  bumpversion.py  class_diagrams.uxf  conf.py  index.html  index.rst  make.bat  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-mkdocs.txt  restore_precommit_hook.sh  setup.py  tox.ini  use_cases.uxf
.github/workflows/: ci.yml  ci_pipeline.yaml
CHANGELOG/: index.html
INSTALL/: index.html
TODO/: index.html
console_helper/: index.html
constants/: index.html
docs/: CHANGELOG.md  INSTALL.md  TODO.md  console_helper.md  constants.md  file_utils.md  index.md  installation.rst  parser.md  record.md  software_specification_template.md  system_caller.md  usage.rst
docs/xls/: parser.md
file_utils/: index.html
parser/: index.html
previsedx_quantstudio_file_utils/: __init__.py  console_helper.py  constants.py  file_utils.py  parser.py  record.py  system_caller.py
previsedx_quantstudio_file_utils/conf/: config.yaml
previsedx_quantstudio_file_utils/xls/: parser.py
record/: index.html
search/: search_index.json
software_specification_template/: index.html
src/previsedx_quantstudio_file_utils/: __init__.py
system_caller/: index.html
tests/: __init__.py  test_previsedx_quantstudio_file_utils.py
xls/parser/: index.html
